# lektor

./: .gitignore  .gitmodules  Cargo.toml  DEBIAN-QUICKSTART.md  FEATURES_AND_IMPROVEMENTS.md  LICENSE  Makefile  PACKAGING.md  README.md  SESSION_MANAGEMENT.md  config.example.toml  test.cpp  test.qml  test.rs  test.sh  test_case.txt  test_indent.py  test_instructions.md  test_no_newline.txt  test_replace.txt  test_sidebar.sh  test_undo.txt
.claude/: settings.local.json
debian/: README.Debian  changelog  control  copyright  rules
src/: app.rs  app_backup.rs  buffer.rs  buffer_manager.rs  config.rs  cursor.rs  main.rs  render_cache.rs  session.rs  session_commands.rs  session_handler.rs  sidebar.rs  split.rs  syntax.rs  theme.rs  undo.rs
src/app/: diff.rs  editing.rs  events.rs  mod.rs  mode_handlers.rs  render.rs  split_ops.rs
