[package]
name = "lektor"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1.35", features = ["full"] }
tui-textarea = "0.6"
syntect = "5.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
git2 = "0.18"
anyhow = "1.0"
arboard = "3.3"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-toml = "0.20"
tree-sitter-json = "0.20"
tree-sitter-html = "0.20"
tree-sitter-css = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-c = "0.20"
tree-sitter-qmljs = "0.1"
# tree-sitter-yaml = "0.5" # Version mismatch, commented out
unicode-width = "0.1"
ropey = "1.6"
serde_json = "1.0.145"
once_cell = "1.21.3"
